--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 767px) {
+    .desktop-only {
+        display: none;
+    }
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
