--- a/style.css
+++ b/style.css
@@ -151,4 +151,21 @@ h1 {
       opacity: 0;
     }
   }
+
+ .serce {
+    position: fixed;
+    z-index: -1;
+    top: -1vh;
+    font-size: 2rem;
+    transform: translateY(0);
+    animation: fall 3s linear forwards;
+}
+
+
+
+@keyframes fall {
+    to {
+        transform: translateY(105vh);
+    }
+}
   
